DX: activate and configure VSCode isort extension

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -23,6 +23,7 @@ vscode:
     - executablebookproject.myst-highlight
     - github.vscode-pull-request-github
     - ms-python.flake8
+    - ms-python.isort
     - ms-python.pylint
     - ms-python.python
     - ms-python.vscode-pylance
