--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,8 @@
     ".github/workflows/ci-tests.yml",
     ".github/workflows/ci-docs.yml"
   ],
+  "isort.check": true,
+  "isort.importStrategy": "fromEnvironment",
   "myst.preview.extensions": ["amsmath", "colon_fence", "dollarmath", "tasklist"],
   "pylint.importStrategy": "fromEnvironment",
   "python.analysis.autoImportCompletions": false,
