--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
       - id: check-useless-excludes
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.4.0
     hooks:
       - id: check-ast
       - id: check-case-conflict
@@ -42,13 +42,32 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.149
+    rev: 0.0.159
     hooks:
       - id: check-dev-files
         args:
           - --pin-requirements=bimonthly
       - id: fix-nbformat-version
       - id: format-setup-cfg
+
+  - repo: https://github.com/sirosen/check-jsonschema
+    rev: 0.19.2
+    hooks:
+      - id: check-jsonschema
+        name: Check project inventory YAML files
+        language: python
+        files: docs/software/.*\.yml
+        types: [yaml]
+        args: ["--schemafile", "./docs/software/project-inventory-schema.json"]
+
+  - repo: local
+    hooks:
+      - id: update-json-schema
+        name: Update JSON schemas for project inventories
+        entry: export-json-schema
+        language: system
+        pass_filenames: false
+        files: (docs/software/.*\.json|src/pwa_pages/project_inventory.py)
 
   - repo: https://github.com/psf/black
     rev: 22.10.0
@@ -61,7 +80,7 @@ repos:
       - id: blacken-docs
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v6.13.0
+    rev: v6.14.1
     hooks:
       - id: cspell
 
@@ -78,6 +97,7 @@ repos:
     rev: 2.6.1
     hooks:
       - id: editorconfig-checker
+        name: editorconfig
         exclude: >
           (?x)^(
             .*\.ipynb|
@@ -85,6 +105,15 @@ repos:
             .*\.py|
             LICENSE
           )$
+
+  - repo: local
+    hooks:
+      - id: flake8
+        name: flake8
+        entry: flake8
+        language: system
+        types:
+          - python
 
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
@@ -95,6 +124,16 @@ repos:
     rev: v0.32.2
     hooks:
       - id: markdownlint
+
+  - repo: local
+    hooks:
+      - id: mypy
+        name: mypy
+        entry: mypy
+        language: system
+        require_serial: true
+        types:
+          - python
 
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.5.3
@@ -129,6 +168,7 @@ repos:
             metadata.toc-showtags
             metadata.varInspector
             metadata.vscode
+
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.0-alpha.4
     hooks:
@@ -139,57 +179,8 @@ repos:
     hooks:
       - id: pydocstyle
 
-  - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.277
-    hooks:
-      - id: pyright
-
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.2.0
-    hooks:
-      - id: pyupgrade
-        args:
-          - --py36-plus
-
   - repo: local
     hooks:
-      - id: update-json-schema
-        name: Update JSON schemas for project inventories
-        entry: export-json-schema
-        language: system
-        pass_filenames: false
-        files: (docs/software/.*\.json|src/pwa_pages/project_inventory.py)
-
-  - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.18.4
-    hooks:
-      - id: check-jsonschema
-        name: Check project inventory YAML files
-        language: python
-        files: docs/software/.*\.yml
-        types: [yaml]
-        args: ["--schemafile", "./docs/software/project-inventory-schema.json"]
-
-  # The following tools have to be install locally, because they can also be
-  # used by code editors (e.g. linting and format-on-save).
-
-  - repo: local
-    hooks:
-      - id: flake8
-        name: flake8
-        entry: flake8
-        language: system
-        types:
-          - python
-
-      - id: mypy
-        name: mypy
-        entry: mypy
-        language: system
-        require_serial: true
-        types:
-          - python
-
       - id: pylint
         name: pylint
         entry: pylint
@@ -199,3 +190,15 @@ repos:
         language: system
         types:
           - python
+
+  - repo: https://github.com/ComPWA/mirrors-pyright
+    rev: v1.1.281
+    hooks:
+      - id: pyright
+
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.2.2
+    hooks:
+      - id: pyupgrade
+        args:
+          - --py36-plus
