--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,24 +36,28 @@
     "**/.git/**": true,
     "**/.tox/**": true
   },
+  "flake8.importStrategy": "fromEnvironment",
   "git.rebaseWhenSync": true,
   "github-actions.workflows.pinned.workflows": [
     ".github/workflows/linkcheck.yml",
     ".github/workflows/ci-tests.yml",
     ".github/workflows/ci-docs.yml"
   ],
+  "isort.check": true,
+  "isort.importStrategy": "fromEnvironment",
   "myst.preview.extensions": ["amsmath", "colon_fence", "dollarmath", "tasklist"],
+  "pylint.importStrategy": "fromEnvironment",
   "python.analysis.autoImportCompletions": false,
   "python.analysis.diagnosticMode": "workspace",
+  "python.analysis.typeCheckingMode": "strict",
   "python.formatting.provider": "black",
   "python.linting.banditEnabled": false,
   "python.linting.enabled": true,
-  "python.linting.flake8Enabled": true,
+  "python.linting.flake8Enabled": false,
   "python.linting.mypyEnabled": true,
   "python.linting.pydocstyleEnabled": true,
   "python.linting.pylamaEnabled": false,
-  "python.linting.pylintCategorySeverity.refactor": "Information",
-  "python.linting.pylintEnabled": true,
+  "python.linting.pylintEnabled": false,
   "python.testing.autoTestDiscoverOnSaveEnabled": false,
   "python.testing.pytestArgs": [
     "--color=no",
