--- a/setup.cfg
+++ b/setup.cfg
@@ -122,6 +122,7 @@ dev =
     pip-tools >=6.1.0  # for extras_require
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
+    tox <4; python_version <"3.8.0"
 
 [options.entry_points]
 console_scripts =
