MAINT: add `repo-title` argument

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,6 +47,8 @@ repos:
       - id: check-dev-files
         args:
           - --pin-requirements=bimonthly
+          - --repo-name=PWA-pages
+          - --repo-title=PWA Pages
       - id: fix-nbformat-version
       - id: format-setup-cfg
 
