--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
     uses: ComPWA/actions/.github/workflows/pytest.yml@dev
     with:
       coverage-target: PWA_pages
+      skipped-python-versions: all
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
   style:
     if: inputs.specific-pip-packages == ''
