--- a/.github/workflows/pr-linting.yml
+++ b/.github/workflows/pr-linting.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: docker://agilepathway/pull-request-label-checker:latest
         with:
           any_of: |
-            Bug,💡 Feature,⚠️ Interface,📝 Docs,🔨 Maintenance,🖱️ DX,📖 Analysis,
+            Bug,✨ Feature,⚠️ Interface,📝 Docs,🔨 Maintenance,🖱️ DX,📖 Analysis,
             📖 Software,📖 Theory
           none_of: ❌ Won't fix,💫 Good first issue
           repo_token: ${{ secrets.GITHUB_TOKEN }}
