--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,15 +25,15 @@ on:
 
 jobs:
   doc:
-    uses: ComPWA/actions/.github/workflows/ci-docs.yml@dev
+    uses: ComPWA/actions/.github/workflows/ci-docs.yml@v1
     with:
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
   pytest:
-    uses: ComPWA/actions/.github/workflows/pytest.yml@dev
+    uses: ComPWA/actions/.github/workflows/pytest.yml@v1
     with:
       coverage-target: pwa_pages
       skipped-python-versions: all
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
   style:
     if: inputs.specific-pip-packages == ''
-    uses: ComPWA/actions/.github/workflows/pre-commit.yml@dev
+    uses: ComPWA/actions/.github/workflows/pre-commit.yml@v1
