--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
   },
   "telemetry.telemetryLevel": "off",
   "yaml.schemas": {
-    "./docs/software/project-inventory-schema.json": ["docs/software/*.yml"]
+    "./docs/software/project-inventory-schema.json": ["docs/software/*.yml"],
+    "https://json.schemastore.org/github-workflow.json": "./.github/workflows/requirements.yml"
   }
 }
