DX: outsource GitHub workflows to ComPWA/actions (#180)
* MAINT: rename "✨ Feature" issue label

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,6 @@ ci:
     - pylint
     - update-json-schema
     # hooks that don't work on pre-commit.ci
-    - editorconfig-checker
     - pyright
 
 repos:
@@ -42,32 +41,29 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.159
+    rev: 0.0.166
     hooks:
       - id: check-dev-files
         args:
+          - --ci-skipped-tests=all
+          - --no-macos
           - --pin-requirements=bimonthly
+          - --repo-name=PWA-pages
+          - --repo-title=PWA Pages
       - id: fix-nbformat-version
       - id: format-setup-cfg
 
-  - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.19.2
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.5.3
     hooks:
-      - id: check-jsonschema
-        name: Check project inventory YAML files
-        language: python
-        files: docs/software/.*\.yml
-        types: [yaml]
-        args: ["--schemafile", "./docs/software/project-inventory-schema.json"]
-
-  - repo: local
-    hooks:
-      - id: update-json-schema
-        name: Update JSON schemas for project inventories
-        entry: export-json-schema
-        language: system
-        pass_filenames: false
-        files: (docs/software/.*\.json|src/pwa_pages/project_inventory.py)
+      - id: nbqa-black
+        additional_dependencies:
+          - black>=22.1.0
+      - id: nbqa-flake8
+      - id: nbqa-isort
+      - id: nbqa-pyupgrade
+        args:
+          - --py36-plus
 
   - repo: https://github.com/psf/black
     rev: 22.10.0
@@ -78,6 +74,16 @@ repos:
     rev: v1.12.1
     hooks:
       - id: blacken-docs
+
+  - repo: https://github.com/sirosen/check-jsonschema
+    rev: 0.19.2
+    hooks:
+      - id: check-jsonschema
+        name: Check project inventory YAML files
+        language: python
+        files: docs/software/.*\.yml
+        types: [yaml]
+        args: ["--schemafile", "./docs/software/project-inventory-schema.json"]
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
     rev: v6.14.1
@@ -135,18 +141,6 @@ repos:
         types:
           - python
 
-  - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.5.3
-    hooks:
-      - id: nbqa-black
-        additional_dependencies:
-          - black>=22.1.0
-      - id: nbqa-flake8
-      - id: nbqa-isort
-      - id: nbqa-pyupgrade
-        args:
-          - --py36-plus
-
   - repo: https://github.com/kynan/nbstripout
     rev: 0.6.1
     hooks:
@@ -202,3 +196,12 @@ repos:
       - id: pyupgrade
         args:
           - --py36-plus
+
+  - repo: local
+    hooks:
+      - id: update-json-schema
+        name: Update JSON schemas for project inventories
+        entry: export-json-schema
+        language: system
+        pass_filenames: false
+        files: (docs/software/.*\.json|src/pwa_pages/project_inventory.py)
