FEAT: verify installation on Python 3.11 (#179)
* DX: remove`docformatter` pre-commit hook

* FIX: limit `tox` version for Python 3.6/3.7

* MAINT: limit NumPy version to avoid `feynman` bug

---------

Co-authored-by: GitHub <noreply@github.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering
     Topic :: Scientific/Engineering :: Physics
     Typing :: Typed
@@ -63,6 +64,7 @@ doc =
     jupyter
     matplotlib
     myst-nb >=0.11  # myst_enable_extensions
+    numpy <1.24  # bug in feynman: https://github.com/ComPWA/PWA-pages/actions/runs/3868808372/jobs/6594501436#step:6:177
     Sphinx >=3
     Sphinx <4.4; python_version <"3.8.0"  # https://github.com/ComPWA/PWA-pages/runs/4998874049
     sphinx-book-theme
@@ -122,6 +124,7 @@ dev =
     pip-tools >=6.1.0  # for extras_require
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
+    tox <4; python_version <"3.8.0"
 
 [options.entry_points]
 console_scripts =
