--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,7 @@ description =
   Run all unit tests
 allowlist_externals =
   pytest
-passenv =
-  GITHUB_REPO
-  GITHUB_TOKEN
+passenv = *
 commands =
   pytest {posargs}
 
@@ -24,9 +22,7 @@ description =
   Compute test coverage
 allowlist_externals =
   pytest
-passenv =
-  GITHUB_REPO
-  GITHUB_TOKEN
+passenv = *
 commands =
   pytest {posargs:tests} \
     --cov-fail-under=90 \
@@ -39,11 +35,7 @@ description =
   Build documentation and API through Sphinx
 allowlist_externals =
   sphinx-build
-passenv =
-  EXECUTE_NB
-  GITHUB_REPO
-  GITHUB_TOKEN
-  READTHEDOCS_VERSION
+passenv = *
 commands =
   sphinx-build \
     --color \
@@ -57,12 +49,7 @@ description =
   Set up a server to directly preview changes to the HTML pages
 allowlist_externals =
   sphinx-autobuild
-passenv =
-  EXECUTE_NB
-  GITHUB_REPO
-  GITHUB_TOKEN
-  READTHEDOCS_VERSION
-  TERM
+passenv = *
 commands =
   sphinx-autobuild \
     --open-browser \
@@ -86,10 +73,7 @@ commands =
 [testenv:docnb]
 description =
   Build documentation through Sphinx WITH output of Jupyter notebooks
-passenv =
-  GITHUB_REPO
-  GITHUB_TOKEN
-  READTHEDOCS_VERSION
+passenv = *
 setenv =
   EXECUTE_NB = "yes"
 allowlist_externals =
@@ -114,11 +98,7 @@ commands =
 [testenv:linkcheck]
 description =
   Check external links in the documentation (requires internet connection)
-passenv =
-  EXECUTE_NB
-  GITHUB_REPO
-  GITHUB_TOKEN
-  READTHEDOCS_VERSION
+passenv = *
 allowlist_externals =
   sphinx-build
 commands =
