DX: show `sphinx-build` with color

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,6 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    --color \
     --keep-going \
     -TW \
     -b html \
@@ -42,6 +41,8 @@ commands =
 description =
   Build documentation and API through Sphinx
 passenv = *
+setenv =
+  FORCE_COLOR = yes
 
 [testenv:doclive]
 allowlist_externals =
@@ -68,13 +69,14 @@ commands =
 description =
   Set up a server to directly preview changes to the HTML pages
 passenv = *
+setenv =
+  FORCE_COLOR = yes
 
 [testenv:docnb]
 allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    --color \
     --keep-going \
     -TW \
     -b html \
@@ -84,6 +86,7 @@ description =
 passenv = *
 setenv =
   EXECUTE_NB = "yes"
+  FORCE_COLOR = yes
 
 [testenv:jcache]
 allowlist_externals =
@@ -99,13 +102,14 @@ allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    --color \
     -T \
     -b linkcheck \
     docs/ docs/_build/linkcheck
 description =
   Check external links in the documentation (requires internet connection)
 passenv = *
+setenv =
+  FORCE_COLOR = yes
 
 [testenv:sty]
 allowlist_externals =
