--- a/tox.ini
+++ b/tox.ini
@@ -85,7 +85,7 @@ description =
   Build documentation through Sphinx WITH output of Jupyter notebooks
 passenv = *
 setenv =
-  EXECUTE_NB = "yes"
+  EXECUTE_NB = yes
   FORCE_COLOR = yes
 
 [testenv:jcache]
