--- a/tox.ini
+++ b/tox.ini
@@ -3,53 +3,50 @@ envlist =
   py,
   doc,
   sty,
-passenv = PYTHONPATH
 skip_install = True
 skip_missing_interpreters = True
 skipsdist = True
 
 [testenv]
-description =
-  Run all unit tests
 allowlist_externals =
   pytest
-passenv = *
 commands =
   pytest {posargs}
+description =
+  Run all unit tests
+passenv = *
 
 [testenv:cov]
-description =
-  Compute test coverage
 allowlist_externals =
   pytest
-passenv = *
 commands =
   pytest {posargs:tests} \
     --cov-fail-under=90 \
     --cov-report=html \
     --cov-report=xml \
     --cov=pwa_pages
+description =
+  Compute test coverage
+passenv = *
 
 [testenv:doc]
-description =
-  Build documentation and API through Sphinx
 allowlist_externals =
   sphinx-build
-passenv = *
 commands =
   sphinx-build \
-    --color \
     --keep-going \
     -TW \
     -b html \
     docs/ docs/_build/html
+description =
+  Build documentation and API through Sphinx
+passenv = *
+setenv =
+  FORCE_COLOR = yes
 
 [testenv:doclive]
-description =
-  Set up a server to directly preview changes to the HTML pages
 allowlist_externals =
   sphinx-autobuild
-passenv = *
 commands =
   sphinx-autobuild \
     --open-browser \
@@ -69,53 +66,59 @@ commands =
     --re-ignore docs/_build/.* \
     --watch docs \
     docs/ docs/_build/html
-
-[testenv:docnb]
 description =
-  Build documentation through Sphinx WITH output of Jupyter notebooks
+  Set up a server to directly preview changes to the HTML pages
 passenv = *
 setenv =
-  EXECUTE_NB = "yes"
+  FORCE_COLOR = yes
+
+[testenv:docnb]
 allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    --color \
     --keep-going \
     -TW \
     -b html \
     docs/ docs/_build/html
+description =
+  Build documentation through Sphinx WITH output of Jupyter notebooks
+passenv = *
+setenv =
+  EXECUTE_NB = yes
+  FORCE_COLOR = yes
 
 [testenv:jcache]
-description =
-  Inspect Jupyter cache
 allowlist_externals =
   jcache
 changedir = docs/_build
 commands =
   jcache {posargs:notebook list}
+description =
+  Inspect Jupyter cache
 
 [testenv:linkcheck]
-description =
-  Check external links in the documentation (requires internet connection)
-passenv = *
 allowlist_externals =
   sphinx-build
 commands =
   sphinx-build \
-    --color \
     -T \
     -b linkcheck \
     docs/ docs/_build/linkcheck
+description =
+  Check external links in the documentation (requires internet connection)
+passenv = *
+setenv =
+  FORCE_COLOR = yes
 
 [testenv:sty]
-description =
-  Perform all linting, formatting, and spelling checks
-setenv =
-  SKIP = mypy, pyright
 allowlist_externals =
   mypy
   pre-commit
 commands =
   mypy docs src tests # run separately because of potential caching problems
   pre-commit run {posargs} -a
+description =
+  Perform all linting, formatting, and spelling checks
+setenv =
+  SKIP = mypy, pyright
