FIX: do not restrict `ypy-websocket` in Python 3.6
https://github.com/ComPWA/PWA-pages/actions/runs/4356973560/jobs/7615700283#step:3:73

--- a/setup.cfg
+++ b/setup.cfg
@@ -125,7 +125,7 @@ dev =
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
     tox <4; python_version <"3.8.0"
-    ypy-websocket!=0.8.3,!=0.8.4  # https://github.com/ComPWA/PWA-pages/actions/runs/4350354169/jobs/7600981452#step:3:79
+    ypy-websocket!=0.8.3,!=0.8.4; python_version >="3.7.0"  # https://github.com/ComPWA/PWA-pages/actions/runs/4350354169/jobs/7600981452#step:3:79
 
 [options.entry_points]
 console_scripts =
