--- a/setup.cfg
+++ b/setup.cfg
@@ -85,17 +85,16 @@ format =
     black
     isort
 flake8 =
-    flake8 >=4  # extend-select
-    flake8-blind-except
-    flake8-bugbear
-    flake8-builtins
-    flake8-comprehensions
-    flake8-pytest-style
-    flake8-rst-docstrings
+    flake8 >=4; python_version >="3.8.0"  # extend-select
+    flake8-blind-except; python_version >="3.8.0"
+    flake8-bugbear; python_version >="3.8.0"
+    flake8-builtins; python_version >="3.8.0"
+    flake8-comprehensions; python_version >="3.8.0"
+    flake8-pytest-style; python_version >="3.8.0"
+    flake8-rst-docstrings; python_version >="3.8.0"
     flake8-type-ignore; python_version >="3.8.0"
-    flake8-use-fstring
-    pep8-naming
-    virtualenv <20.16; python_version <"3.8.0"  # https://github.com/ComPWA/PWA-pages/runs/8127691260?check_suite_focus=true#step:3:73
+    flake8-use-fstring; python_version >="3.8.0"
+    pep8-naming; python_version >="3.8.0"
 mypy =
     mypy >=0.730  # error code support
     types-docutils
