--- a/setup.cfg
+++ b/setup.cfg
@@ -122,6 +122,7 @@ dev =
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
     tox <4; python_version <"3.8.0"
+    virtualenv!=20.16.*,!=20.17.*; python_version <"3.7.0"  # https://github.com/ComPWA/PWA-pages/actions/runs/4359429611/jobs/7621215447#step:3:77
     ypy-websocket!=0.8.3,!=0.8.4; python_version >="3.7.0"  # https://github.com/ComPWA/PWA-pages/actions/runs/4350354169/jobs/7600981452#step:3:79
 
 [options.entry_points]
