MAINT: update pip constraints and pre-commit (#184)
* DOC: add "Last updated" timestamp

* DX: update and apply taplo config

* FIX: do not restrict `ypy-websocket` in Python 3.6
  https://github.com/ComPWA/PWA-pages/actions/runs/4356973560/jobs/7615700283#step:3:73

* MAINT: remove `flake8` on Python 3.7
  https://github.com/ComPWA/PWA-pages/actions/runs/4359310159/jobs/7620957425

* MAINT: remove `pip-tools` from requirements

* FIX: remove `jupyterlab-server` restriction
  https://github.com/ComPWA/PWA-pages/actions/runs/4356973560/jobs/7615700495#step:3:85

* MAINT: resolve `virtualenv` dependency conflict
  https://github.com/ComPWA/PWA-pages/actions/runs/4359429611/jobs/7621215447#step:3:77

* MAINT: resolve `ypy-websocket` dependency conflict
  https://github.com/ComPWA/PWA-pages/actions/runs/4350354169/jobs/7600981452#step:3:79

* MAINT: switch to GitLab as source

---------

Co-authored-by: GitHub <noreply@github.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -85,17 +85,16 @@ format =
     black
     isort
 flake8 =
-    flake8 >=4  # extend-select
-    flake8-blind-except
-    flake8-bugbear
-    flake8-builtins
-    flake8-comprehensions
-    flake8-pytest-style
-    flake8-rst-docstrings
+    flake8 >=4; python_version >="3.8.0"  # extend-select
+    flake8-blind-except; python_version >="3.8.0"
+    flake8-bugbear; python_version >="3.8.0"
+    flake8-builtins; python_version >="3.8.0"
+    flake8-comprehensions; python_version >="3.8.0"
+    flake8-pytest-style; python_version >="3.8.0"
+    flake8-rst-docstrings; python_version >="3.8.0"
     flake8-type-ignore; python_version >="3.8.0"
-    flake8-use-fstring
-    pep8-naming
-    virtualenv <20.16; python_version <"3.8.0"  # https://github.com/ComPWA/PWA-pages/runs/8127691260?check_suite_focus=true#step:3:73
+    flake8-use-fstring; python_version >="3.8.0"
+    pep8-naming; python_version >="3.8.0"
 mypy =
     mypy >=0.730  # error code support
     types-docutils
@@ -120,11 +119,11 @@ dev =
     jupyterlab
     jupyterlab-code-formatter
     jupyterlab-myst; python_version >="3.7.0"
-    jupyterlab-server <2.16; python_version <"3.8.0"  # https://github.com/ComPWA/PWA-pages/actions/runs/3366810070/jobs/5583677711#step:3:80
-    pip-tools >=6.1.0  # for extras_require
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
     tox <4; python_version <"3.8.0"
+    virtualenv!=20.16.*,!=20.17.*; python_version <"3.7.0"  # https://github.com/ComPWA/PWA-pages/actions/runs/4359429611/jobs/7621215447#step:3:77
+    ypy-websocket!=0.8.3,!=0.8.4; python_version >="3.7.0"  # https://github.com/ComPWA/PWA-pages/actions/runs/4350354169/jobs/7600981452#step:3:79
 
 [options.entry_points]
 console_scripts =
