--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,13 +2,12 @@ ci:
   autoupdate_commit_msg: "MAINT: update pip constraints and pre-commit"
   autoupdate_schedule: quarterly # already done by requirements-cron.yml
   skip:
-    # local hooks
     - flake8
     - mypy
     - pylint
-    - update-json-schema
-    # hooks that don't work on pre-commit.ci
     - pyright
+    - taplo
+    - update-json-schema
 
 repos:
   - repo: meta
@@ -41,7 +40,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.166
+    rev: 0.0.171
     hooks:
       - id: check-dev-files
         args:
@@ -54,7 +53,7 @@ repos:
       - id: format-setup-cfg
 
   - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.6.1
+    rev: 1.6.4
     hooks:
       - id: nbqa-black
         additional_dependencies:
@@ -66,7 +65,7 @@ repos:
           - --py36-plus
 
   - repo: https://github.com/psf/black
-    rev: 22.12.0
+    rev: 23.1.0
     hooks:
       - id: black
 
@@ -76,7 +75,7 @@ repos:
       - id: blacken-docs
 
   - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.21.0
+    rev: 0.22.0
     hooks:
       - id: check-jsonschema
         name: Check project inventory YAML files
@@ -86,7 +85,7 @@ repos:
         args: ["--schemafile", "./docs/software/project-inventory-schema.json"]
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v6.19.2
+    rev: v6.31.0
     hooks:
       - id: cspell
 
@@ -155,7 +154,7 @@ repos:
             metadata.vscode
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.4
+    rev: v3.0.0-alpha.6
     hooks:
       - id: prettier
 
@@ -177,7 +176,7 @@ repos:
           - python
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.291
+    rev: v1.1.300
     hooks:
       - id: pyright
 
@@ -187,6 +186,11 @@ repos:
       - id: pyupgrade
         args:
           - --py36-plus
+
+  - repo: https://github.com/ComPWA/mirrors-taplo
+    rev: v0.8.0
+    hooks:
+      - id: taplo
 
   - repo: local
     hooks:
