MAINT: remove outdated version restrictions

--- a/setup.cfg
+++ b/setup.cfg
@@ -98,19 +98,21 @@ sty =
     %(lint)s
     %(test)s  # for pytest type hints
     pre-commit >=1.4.0
-dev =
+jupyter =
     %(doc)s
-    %(sty)s
-    %(test)s
     jupyterlab
     jupyterlab-code-formatter
     jupyterlab-myst; python_version >="3.7.0"
+    ypy-websocket <0.8.3; python_version=="3.7.8"
+dev =
+    %(doc)s
+    %(jupyter)s
+    %(sty)s
+    %(test)s
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
-    tox <4; python_version <"3.8.0"
     virtualenv !=20.16.*; python_version <"3.7.0"  # https://github.com/ComPWA/PWA-pages/actions/runs/4359429611/jobs/7621215447#step:3:77
     virtualenv !=20.17.*; python_version <"3.7.0"  # https://github.com/ComPWA/PWA-pages/actions/runs/4359429611/jobs/7621215447#step:3:77
-    ypy-websocket <0.8.3; python_version >="3.7.0"  # https://github.com/ComPWA/PWA-pages/actions/runs/4350354169/jobs/7600981452#step:3:79
 
 [options.entry_points]
 console_scripts =
