--- a/setup.cfg
+++ b/setup.cfg
@@ -102,7 +102,7 @@ jupyter =
     jupyterlab
     jupyterlab-code-formatter
     jupyterlab-myst; python_version >="3.7.0"
-    ypy-websocket <0.8.3; python_version=="3.7.8"
+    ypy-websocket <0.8.3; python_version=="3.7.*"
 dev =
     %(doc)s
     %(jupyter)s
