MAINT: drop Python 3.6 support

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,6 @@ classifiers =
     Natural Language :: English
     Operating System :: OS Independent
     Programming Language :: Python
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
@@ -40,7 +39,7 @@ classifiers =
     Typing :: Typed
 
 [options]
-python_requires = >=3.6
+python_requires = >=3.7
 setup_requires =
     setuptools_scm
 install_requires =
@@ -57,7 +56,6 @@ package_dir =
 
 [options.extras_require]
 doc =
-    dataclasses; python_version <'3.7'
     feynman
     importlib-metadata; python_version <"3.8.0"
     ipywidgets
@@ -101,8 +99,8 @@ jupyter =
     %(doc)s
     jupyterlab
     jupyterlab-code-formatter
-    jupyterlab-myst; python_version >="3.7.0"
-    ypy-websocket <0.8.3; python_version=="3.7.*"
+    jupyterlab-myst
+    ypy-websocket <0.8.3; python_version <"3.8.0"
 dev =
     %(doc)s
     %(jupyter)s
@@ -110,8 +108,6 @@ dev =
     %(test)s
     sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
-    virtualenv !=20.16.*; python_version <"3.7.0"  # https://github.com/ComPWA/PWA-pages/actions/runs/4359429611/jobs/7621215447#step:3:77
-    virtualenv !=20.17.*; python_version <"3.7.0"  # https://github.com/ComPWA/PWA-pages/actions/runs/4359429611/jobs/7621215447#step:3:77
 
 [options.entry_points]
 console_scripts =
