DOC: add languages to Rio++

--- a/docs/software/amplitude-analysis-projects.yml
+++ b/docs/software/amplitude-analysis-projects.yml
@@ -61,8 +61,10 @@ projects:
 
   - name: Rio++
     url: https://www.dropbox.com/sh/ydpg4xj4n817ppk/AACLohbJW2JDkFwlfiF2MlBva?dl=0
-    since: 2023
     collaboration: LHCb
+    languages:
+      - C++
+    since: 2023
 
   - name: ROOTPWA
     url: https://github.com/ROOTPWA-Maintainers/ROOTPWA
