--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,7 @@ package_dir =
 
 [options.extras_require]
 doc =
+    docutils <0.18  # https://github.com/executablebooks/jupyter-book/issues/2026#issuecomment-1636657741
     feynman
     importlib-metadata; python_version <"3.8.0"
     ipywidgets
