--- a/.github/workflows/pr-linting.yml
+++ b/.github/workflows/pr-linting.yml
@@ -18,9 +18,8 @@ jobs:
     steps:
       - uses: docker://agilepathway/pull-request-label-checker:latest
         with:
-          any_of: |
-            Bug,✨ Feature,⚠️ Interface,📝 Docs,🔨 Maintenance,🖱️ DX,📖 Analysis,
-            📖 Software,📖 Theory
+          any_of: >-
+            🐛 Bug,✨ Feature,⚙️ Enhancement,⚠️ Interface,❗ Behavior,📝 Docs,🔨 Maintenance,🖱️ DX
           none_of: ❌ Won't fix,💫 Good first issue
           repo_token: ${{ secrets.GITHUB_TOKEN }}
 
