--- a/pyproject.toml
+++ b/pyproject.toml
@@ -196,6 +196,7 @@ task-tags = ["cspell"]
     "T201",
 ]
 "setup.py" = ["D100"]
+"src/pwa_pages/project_inventory.py" = ["UP00"]
 "tests/*" = [
     "D",
     "INP001",
