MAINT: update pip constraints and pre-commit (#192)
* FIX: update allowed PR/issue labels
* MAINT: use future annotations where possible (not with pydantic)

---------

Co-authored-by: GitHub <noreply@github.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
   "git.rebaseWhenSync": true,
   "github-actions.workflows.pinned.workflows": [".github/workflows/ci.yml"],
   "livePreview.defaultPreviewPath": "docs/_build/html",
+  "mypy-type-checker.args": ["--config-file", "pyproject.toml"],
   "mypy-type-checker.importStrategy": "fromEnvironment",
   "myst.preview.extensions": ["amsmath", "colon_fence", "dollarmath", "tasklist"],
   "python.analysis.autoImportCompletions": false,
