--- a/setup.cfg
+++ b/setup.cfg
@@ -100,7 +100,9 @@ jupyter =
     %(doc)s
     jupyterlab
     jupyterlab-code-formatter
+    jupyterlab-lsp
     jupyterlab-myst
+    python-lsp-server[rope]
     ypy-websocket <0.8.3; python_version <"3.8.0"
 dev =
     %(doc)s
