DOC: make Colab TOC visible by default

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.198
+    rev: 0.0.199
     hooks:
       - id: check-dev-files
         args:
@@ -48,6 +48,7 @@ repos:
           - --pin-requirements=bimonthly
           - --repo-name=PWA-pages
           - --repo-title=PWA Pages
+      - id: colab-toc-visible
       - id: fix-nbformat-version
       - id: format-setup-cfg
 
