MAINT: switch to new `sphinx-hep-pdgref`

--- a/setup.cfg
+++ b/setup.cfg
@@ -70,10 +70,10 @@ doc =
     sphinx-comments
     sphinx-copybutton
     sphinx-design
+    sphinx-hep-pdgref
     sphinx-thebe
     sphinx-togglebutton
     sphinxcontrib-bibtex >=2.2  # bibtex_reference_style
-    sphinxcontrib-hep-pdgref
     sympy
 test =
     pytest
