--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -164,7 +164,7 @@ repos:
       - id: taplo
 
   - repo: https://github.com/pappasam/toml-sort
-    rev: PLEASE-UPDATE
+    rev: v0.23.1
     hooks:
       - id: toml-sort
         args:
