MAINT: update pip constraints and pre-commit (#195)
* DOC: make Colab TOC visible by default
* DX: lint PRs with shared commitlint config
* DX: merge `setup.cfg` into `pyproject.toml`
* DX: switch to `black-jupyter` hook
* DX: remove `.prettierrc`
* DX: remove GitHub Issue templates
* DX: synchronize ComPWA dev environment

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: GitHub <noreply@github.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
       - id: check-useless-excludes
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
       - id: check-ast
       - id: check-case-conflict
@@ -39,24 +39,21 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.197
+    rev: 0.1.0
     hooks:
       - id: check-dev-files
         args:
           - --ci-skipped-tests=all
           - --no-macos
+          - --no-prettierrc
           - --pin-requirements=bimonthly
           - --repo-name=PWA-pages
           - --repo-title=PWA Pages
+      - id: colab-toc-visible
       - id: fix-nbformat-version
-      - id: format-setup-cfg
-
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.7.0
     hooks:
-      - id: nbqa-black
-        additional_dependencies:
-          - black>=22.1.0
       - id: nbqa-pyupgrade
         args:
           - --py37-plus
@@ -65,9 +62,12 @@ repos:
           - --fix
 
   - repo: https://github.com/psf/black
-    rev: 23.9.0
+    rev: 23.9.1
     hooks:
       - id: black
+      - id: black-jupyter
+        args: [--line-length=85]
+        types_or: [jupyter]
 
   - repo: https://github.com/asottile/blacken-docs
     rev: 1.16.0
@@ -75,7 +75,7 @@ repos:
       - id: blacken-docs
 
   - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.26.3
+    rev: 0.27.0
     hooks:
       - id: check-jsonschema
         name: Check project inventory YAML files
@@ -85,7 +85,7 @@ repos:
         args: ["--schemafile", "./docs/software/project-inventory-schema.json"]
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v7.3.0
+    rev: v7.3.1
     hooks:
       - id: cspell
 
@@ -99,11 +99,6 @@ repos:
           (?x)^(
             .*\.py
           )$
-
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.36.0
-    hooks:
-      - id: markdownlint
 
   - repo: local
     hooks:
@@ -125,6 +120,7 @@ repos:
             cell.attachments
             cell.metadata.code_folding
             cell.metadata.id
+            cell.metadata.pycharm
             cell.metadata.user_expressions
             metadata.celltoolbar
             metadata.colab.name
@@ -145,19 +141,19 @@ repos:
       - id: prettier
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.326
+    rev: v1.1.330
     hooks:
       - id: pyright
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.10.1
+    rev: v3.15.0
     hooks:
       - id: pyupgrade
         args:
           - --py37-plus
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.0.287
+    rev: v0.0.292
     hooks:
       - id: ruff
         args:
@@ -167,6 +163,13 @@ repos:
     rev: v0.8.1
     hooks:
       - id: taplo
+
+  - repo: https://github.com/pappasam/toml-sort
+    rev: v0.23.1
+    hooks:
+      - id: toml-sort
+        args:
+          - --in-place
 
   - repo: local
     hooks:
