--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,7 +62,7 @@ repos:
           - --fix
 
   - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: PLEASE-UPDATE
+    rev: 23.10.1
     hooks:
       - id: black
       - id: black-jupyter
