--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.1.1
+    rev: 0.1.9
     hooks:
       - id: check-dev-files
         args:
@@ -52,7 +52,7 @@ repos:
       - id: colab-toc-visible
       - id: fix-nbformat-version
   - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.7.0
+    rev: 1.7.1
     hooks:
       - id: nbqa-pyupgrade
         args:
@@ -75,7 +75,7 @@ repos:
       - id: blacken-docs
 
   - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.27.1
+    rev: 0.27.3
     hooks:
       - id: check-jsonschema
         name: Check project inventory YAML files
@@ -85,7 +85,7 @@ repos:
         args: ["--schemafile", "./docs/software/project-inventory-schema.json"]
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v8.0.0
+    rev: v8.1.1
     hooks:
       - id: cspell
 
@@ -136,12 +136,12 @@ repos:
             metadata.vscode
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.3
+    rev: v4.0.0-alpha.3-1
     hooks:
       - id: prettier
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.334
+    rev: v1.1.339
     hooks:
       - id: pyright
 
@@ -153,7 +153,7 @@ repos:
           - --py37-plus
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.4
+    rev: v0.1.7
     hooks:
       - id: ruff
         args:
