--- a/tox.ini
+++ b/tox.ini
@@ -88,6 +88,35 @@ setenv =
   EXECUTE_NB = yes
   FORCE_COLOR = yes
 
+[testenv:docnblive]
+allowlist_externals =
+  sphinx-autobuild
+commands =
+  sphinx-autobuild \
+    --open-browser \
+    --re-ignore .*/.ipynb_checkpoints/.* \
+    --re-ignore .*/__pycache__/.* \
+    --re-ignore .*\.gitignore \
+    --re-ignore docs/.*\.csv \
+    --re-ignore docs/.*\.gif \
+    --re-ignore docs/.*\.gv \
+    --re-ignore docs/.*\.inv \
+    --re-ignore docs/.*\.json \
+    --re-ignore docs/.*\.pickle \
+    --re-ignore docs/.*\.png \
+    --re-ignore docs/.*\.svg \
+    --re-ignore docs/.*\.yaml \
+    --re-ignore docs/.*\.yml \
+    --re-ignore docs/_build/.* \
+    --watch docs \
+    docs/ docs/_build/html
+description =
+  Set up a server to directly preview changes to the HTML pages
+passenv = *
+setenv =
+  EXECUTE_NB = yes
+  FORCE_COLOR = yes
+
 [testenv:jcache]
 allowlist_externals =
   jcache
