DX: define `nb` job in `tox.ini`

--- a/tox.ini
+++ b/tox.ini
@@ -140,6 +140,17 @@ passenv = *
 setenv =
   FORCE_COLOR = yes
 
+[testenv:nb]
+allowlist_externals =
+  pytest
+commands =
+  pytest --nbmake {posargs:docs}
+description =
+  Run all notebooks with pytest
+passenv = *
+setenv =
+  PYTHONHASHSEED = 0
+
 [testenv:sty]
 allowlist_externals =
   mypy
