--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ doc = [
     "sphinx-copybutton",
     "sphinx-design",
     "sphinx-hep-pdgref",
+    "sphinx-pybtex-etal-style",
     "sphinx-thebe",
     "sphinx-togglebutton",
     "sphinxcontrib-bibtex >=2.2", # bibtex_reference_style
