MAINT: clean up `conf.py` with new Sphinx extensions

--- a/tox.ini
+++ b/tox.ini
@@ -64,6 +64,7 @@ commands =
     --re-ignore docs/.*\.yaml \
     --re-ignore docs/.*\.yml \
     --re-ignore docs/_build/.* \
+    --re-ignore docs/api \
     --watch docs \
     docs/ docs/_build/html
 description =
@@ -108,6 +109,7 @@ commands =
     --re-ignore docs/.*\.yaml \
     --re-ignore docs/.*\.yml \
     --re-ignore docs/_build/.* \
+    --re-ignore docs/api \
     --watch docs \
     docs/ docs/_build/html
 description =
