--- a/pyproject.toml
+++ b/pyproject.toml
@@ -336,6 +336,7 @@ task-tags = ["cspell"]
     "S113",
     "T201",
 ]
+"docs/conf.py" = ["A001"]
 "setup.py" = ["D100"]
 "src/pwa_pages/project_inventory.py" = [
     "FA100",
